--- a/BulkyBookWeb/Areas/Customer/Views/Home/Index.cshtml
+++ b/BulkyBookWeb/Areas/Customer/Views/Home/Index.cshtml
@@ -5,5 +5,4 @@
 <div class="text-center">
     <h1 class="display-4">Welcaaome1122</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</di>v
-
+</div>
