--- a/BulkyBookWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BulkyBookWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -1,6 +1,9 @@
 ﻿@model ProductVM
 
 <form method="post" asp-action="Upsert" enctype="multipart/form-data">
+    @Html.AntiForgeryToken()
+    <input type="hidden" asp-for="Product.Id" />
+    <input type="hidden" asp-for="Product.ImageUrl" />
     <div class="border p-3 mt-4 row">
         <div class="row pb-2">
             <h2 class="text-primary">@(Model.Product.Id!=0 ? "Update" : "Create") Product</h2>
@@ -54,9 +57,13 @@
                 <option disabled selected>--Select CoverType--</option>
             </select>
         </div>
-        <button type="submit" class="btn btn-primary" style="width:150px">Create</button>
+        <button type="submit" class="btn btn-primary" style="width:150px">@(Model.Product.Id!=0 ? "Update" : "Create")</button>
         <a asp-area="Admin" asp-controller="Product" asp-action="Index" class="btn btn-secondary" style="width:150px">
             Back to List
         </a>
     </div>
 </form>
+
+<div>
+    <img src="@Model.Product.ImageUrl" />
+</div>
